fix(components): Reduce flickering when toggling navigation in swirl-shell-layout

--- a/packages/swirl-components/src/components/swirl-shell-navigation-item/swirl-shell-navigation-item.css
+++ b/packages/swirl-components/src/components/swirl-shell-navigation-item/swirl-shell-navigation-item.css
@@ -196,6 +196,7 @@
     gap: var(--s-space-8);
 
     &.shell-navigation-item--hide-label {
+      align-items: start;
       padding: var(--s-space-8);
       --swirl-app-icon-size: 2rem;
 
